--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,27 +1,18 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <div class="container-fluid">
-        <a class="navbar-brand mb-lg-2" href="#">Brand</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-2">
-                <li class="nav-item">
-                    <a class="nav-link active" href="#">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
-                </li>
-            </ul>
-            <ul class="navbar-nav">
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false"> Menu </a>
-                    <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-                        <li><a class="dropdown-item" href="">Action</a></li>
-                        <li><a class="dropdown-item" href="#">Another action</a></li>
-                    </ul>
-                </li>
+<nav class="navbar navbar-expand-lg navbar-light py-3" id="mainNav">
+    <div class="container px-4 px-lg-5">
+        <a href="">
+            <a class="navbar-brand"><img src="../../../assets/images/logo final.png" class="imgLogo" height="56" alt=""></a>
+            <a class="fullStackString">Full Stack Developer</a>
+        </a>
+
+        <button class="navbar-toggler navbar-toggler-right" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+        <div class="collapse navbar-collapse" id="navbarResponsive">
+            <ul class="navbar-nav ms-auto my-2 my-lg-0">
+                <li class="nav-item"><button class="nav-link btn shadow-none" (click)="about()">About me</button></li>
+                <li class="nav-item"><button class="nav-link btn shadow-none" (click)="services()">Services</button></li>
+                <li class="nav-item"><button class="nav-link btn shadow-none" (click)="portfolio()">Portfolio</button></li>
+                <li class="nav-item"><button class="nav-link btn shadow-none" (click)="contact()">Contact</button></li>
             </ul>
         </div>
     </div>
-  </nav>
+</nav>
