added bg images and finalized nav

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -9,8 +9,9 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ms-auto my-2 my-lg-0">
                 <li class="nav-item"><button class="nav-link btn shadow-none" (click)="about()">About me</button></li>
-                <li class="nav-item"><button class="nav-link btn shadow-none" (click)="services()">Services</button></li>
+                <li><p class=" btn shadow-none">|</p></li>
                 <li class="nav-item"><button class="nav-link btn shadow-none" (click)="portfolio()">Portfolio</button></li>
+                <li><p class=" btn shadow-none">|</p></li>
                 <li class="nav-item"><button class="nav-link btn shadow-none" (click)="contact()">Contact</button></li>
             </ul>
         </div>
