--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,6 +1,6 @@
 <div class="all">
-    <img src="../../../assets/images/aboutBackground.jpg" class="aboutBg" alt="AboutBackgroundImage">
+    <img src="../../../assets/images/aboutBg.jpg" class="aboutBg" alt="AboutBackgroundImage">
     <div class="container">
-        <div>123</div>
+        
     </div>
 </div>
