--- a/src/app/components/landing-page/landing-page.component.html
+++ b/src/app/components/landing-page/landing-page.component.html
@@ -1,2 +1,12 @@
+<div *ngIf="getState()==true">
 <app-header></app-header>
 <app-about></app-about>
+<app-portfolio></app-portfolio>
+<app-contact></app-contact>
+</div>
+<div *ngIf="getState() ==false">
+    <app-header></app-header>
+    <div class="spinner">
+    <div class="spinner-border ml-auto" role="status" aria-hidden="true"></div>
+  </div>
+</div>
