--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,6 +1,8 @@
 <div class="all">
     <img src="../../../assets/images/aboutBg.jpg" class="aboutBg" alt="AboutBackgroundImage">
     <div class="container">
-        
+        <p>Hello there,</p>
+        <p class="name">I'm Francisco</p>
+        <div class="description">Bunch of iuje qwe qwe qwe qw eqwe qw eqwe qw eqw eqweqweqwe qwe qwe qw eqw eqwe qweqwe qweqw eqw eqw ens fwuijdn fwudijhn fuWIJDNfui wjdnf iujwdnf ijdwnij nwdinijn dfija eqw qwe qwe qwe qwe qwe qweq w fnf inaijf</div>
     </div>
 </div>
