proper bg and grid projects

--- a/src/app/components/portfolio/portfolio.component.html
+++ b/src/app/components/portfolio/portfolio.component.html
@@ -1,1 +1,56 @@
-<img src="../../../assets/images/portfolioBg.jpg" class="imgLogo" alt="">
+<div class="container mt-4">
+    <p class="display-3 lead text-center mb-5 mt-5">Portfolio</p>
+    <div class="row m-2">
+        <div class="col border m-2">
+            <p class="title text-center mt-2">Real Estate Agency</p>
+            <p class="lead">A Real Estate agency that allows users to view and follow property, and agents to do all things mentioned previously plus managing the properties</p>
+            <div class="container d-flex justify-content-center">
+                <a href="https://github.com/franciscovieiracode" target="_blank"><img src="../../../assets/images/github.jpg" height="30" alt="" class="m-2"></a>
+                <button (click)="detailed()" class="mb-2 btn btn-outline-dark btn-sm">Detailed info</button>
+            </div>
+        </div>
+        <div class="col border m-2">
+            <p class="title text-center mt-2">Crypto Prices</p>
+            <p class="lead">Updated prices and more of top 30 cryptocurrencies by marketcap, data retrived from Binance public API and its being refreshed every 5 seconds</p>
+            <div class="extra container d-flex justify-content-center">
+                <a href="https://github.com/franciscovieiracode" target="_blank"><img src="../../../assets/images/github.jpg" height="30" alt="" class="m-2"></a>
+                <button (click)="detailed()" class="mb-2 btn btn-outline-dark btn-sm">Detailed info</button>
+            </div>
+        </div>
+        <div class="col border m-2">
+            <p class="title text-center mt-2">Real Estate Agency</p>
+            <p class="lead">A Real Estate agency that allows users to view and follow property, and agents to do all things mentioned previously plus managing the properties</p>
+            <div class="container d-flex justify-content-center">
+                <a href="https://github.com/franciscovieiracode" target="_blank"><img src="../../../assets/images/github.jpg" height="30" alt="" class="m-2"></a>
+                <button (click)="detailed()" class="mb-2 btn btn-outline-dark btn-sm">Detailed info</button>
+            </div>
+        </div>
+    </div>
+    {{ '' // next row }}
+    <div class="row m-2">
+        <div class="col border m-2">
+            <p class="title text-center mt-2">Real Estate Agency</p>
+            <p class="lead">A Real Estate agency that allows users to view and follow property, and agents to do all things mentioned previously plus managing the properties</p>
+            <div class="container d-flex justify-content-center">
+                <a href="https://github.com/franciscovieiracode" target="_blank"><img src="../../../assets/images/github.jpg" height="30" alt="" class="m-2"></a>
+                <button (click)="detailed()" class="mb-2 btn btn-outline-dark btn-sm">Detailed info</button>
+            </div>
+        </div>
+        <div class="col border m-2">
+            <p class="title text-center mt-2">Real Estate Agency</p>
+            <p class="lead">A Real Estate agency that allows users to view and follow property, and agents to do all things mentioned previously plus managing the properties</p>
+            <div class="container d-flex justify-content-center">
+                <a href="https://github.com/franciscovieiracode" target="_blank"><img src="../../../assets/images/github.jpg" height="30" alt="" class="m-2"></a>
+                <button (click)="detailed()" class="mb-2 btn btn-outline-dark btn-sm">Detailed info</button>
+            </div>
+        </div>
+        <div class="col border m-2">
+            <p class="title text-center mt-2">Real Estate Agency</p>
+            <p class="lead">A Real Estate agency that allows users to view and follow property, and agents to do all things mentioned previously plus managing the properties</p>
+            <div class="container d-flex justify-content-center">
+                <a href="https://github.com/franciscovieiracode" target="_blank"><img src="../../../assets/images/github.jpg" height="30" alt="" class="m-2"></a>
+                <button (click)="detailed()" class="mb-2 btn btn-outline-dark btn-sm">Detailed info</button>
+            </div>
+        </div>
+    </div>
+</div>
