--- a/src/app/components/about/about.component.css
+++ b/src/app/components/about/about.component.css
@@ -1,44 +1,32 @@
-::ng-deep .aboutBg{
-    width: 100%;
-    height: auto;
-    background-size:cover;
-    position:relative;
+.container-fluid{
+    height: 100%;
+    padding: 0%;
+    position: relative;
 }
 
-.all{
-    position: relative;
-    height: auto;
+@keyframes mymove {
+    from {left: 15%;}
+    to {left: 23%;}
+  }
+
+.imgLogo{
+    width: 100%;
+    height: 47.5rem;
 }
 
 .container { 
     position: absolute;
-    top: 10%;
-    left: 10%;
-    max-width: 80%;
-    font-size: calc((22vw - 1.5rem) / 10);
+    top: 20%;
+    left: 23%;
+    max-width: 65%;
+    color: white;
+    animation: mymove 2s;
+    animation-delay: 0s;
+    
   }
 
-  .name{
-    font-size: calc((30vw - 1.5rem) / 10);
-  }
-
-.description{
-    max-width: 50%;
-    line-height: 180%;
-}
-.button{
-    padding: 2%;
-}
-
-@media (max-width: 767.98px) {
+  @media (max-width: 576px) {
     .container{
-        font-size: calc((26vw - 1.5rem) / 10);
+        top: 10%;
     }
-    .name{
-        font-size: calc((30vw - 1.5rem) / 10);
-
-    }
-    .btn{
-        font-size: 3px;
-    }
- }
+   }
