--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,11 +1,14 @@
-<div class="all">
-    <img src="../../../assets/images/aboutBg1.jpg" class="aboutBg" alt="AboutBackgroundImage">
-    <div class="container">
-        <p>Hello there,</p>
-        <p class="name">I'm Francisco</p>
-        <div class="description">Bunch of iuje qwe qwe qwe qw eqwe qw eqwe qw eqw eqweqweqwe qwe qwe qw eqw eqwe qweqwe qweqw eqw eqw ens fwuijdn fwudijhn fuWIJDNfui wjdnf iujwdnf ijdwnij nwdinijn dfija eqw qwe qwe qwe qwe qwe qweq w fnf inaijf</div>
-        <div class="button">
-            <button class="btn btn-secondary active ">Download Resume</button>
-        </div>
-    </div>
+    <div class="container-fluid">
+        <img src="../../../assets/images/portfolioBg.jpg" class="imgLogo" alt="">
+        <div class="container">
+        <p class="display-6">Hello there,</p>
+        <p class="display-1">I'm Francisco</p>
+        <div class="description">A full stack software engineer based in Porto, Portugal. Born in late 99, at the moment going 
+            into my final year of my software engineering degree in Escola Superior de Tecnologia e Gestão - 
+            Instituto Politécnico do Porto, over the past years i deleloped a huge passion for web development, ending up being a junior full stack engennier. 
+            Being the MEAN stack my favorite tech stack to work with. But due to myself being a natural researcher, i've also worked with all kinds of technologies</div>
+        <div class="mt-3">
+            <button (click)="openCV()" class="btn btn-secondary active btn-sm">My Curriculum Vitae</button>
+         </div>
 </div>
+    </div>
