--- a/src/app/components/contact/contact.component.css
+++ b/src/app/components/contact/contact.component.css
@@ -1,19 +1,16 @@
-:host ::ng-deep .imgLogo{
-    max-width: 100%;
-    max-height: 100%;
-    background: url('../../../assets/images/contactBg.jpg');
-    background-size:cover;
-    position:relative;
+.aboutBg{
+    width: 100%;
+    height: 47.5rem;
 }
 
-/*add media query linkedin adn email*/
-.igLogo{
+.container{
     position: absolute;
-    top: 50%;
-    left: 45%;
-    width: 10%;
 }
 
-.all{
+.container-fluid{
     position: relative;
+    padding: 0%;
+}
+.title{
+    position: absolute;
 }
