--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -1,4 +1,10 @@
-<div class="all">
-    <img src="../../../assets/images/contactBg.jpg" class="imgLogo" alt="">
-    <a href="https://www.instagram.com/_dupre_/" target=”_blank”><img src="../../../assets/images/instaLogo.jpg" alt="" class="igLogo"></a>
+<div class="container-fluid mt-4">
+    <img src="../../../assets/images/contactBg.jpg" class="aboutBg" alt="">
+    <div class="container d-flex justify-content-center">
+        <p class="title display-3 lead mt-3">Contact me at</p>
+        <a href="https://www.linkedin.com/in/francisco-vieira1999" target=”_blank”><img src="../../../assets/images/linkedin.png" height="50" alt=""></a>
+        <a href="https://www.instagram.com/_dupre_/" target=”_blank”><img src="../../../assets/images/instaLogo.jpg" height="50" alt=""></a>
+        <a href="https://www.instagram.com/_dupre_/" target=”_blank”><img src="../../../assets/images/email.jpg" height="50" alt=""></a>
+        <a href="https://github.com/franciscovieiracode" target=”_blank”><img src="../../../assets/images/github.jpg" height="50" alt=""></a>
+    </div>
 </div>
