added detailed project, contact and finished scrollTop button

--- a/src/app/components/contact/contact.component.css
+++ b/src/app/components/contact/contact.component.css
@@ -1,16 +1,23 @@
-.aboutBg{
+.imgBg{
     width: 100%;
     height: 47.5rem;
 }
 
-.container{
-    position: absolute;
-}
-
 .container-fluid{
     position: relative;
+    overflow-x: hidden;
     padding: 0%;
+    
+    
 }
-.title{
-    position: absolute;
+.text{
+    text-decoration: none;
+    color: black;
 }
+
+@media (max-width: 575.98px) { 
+    .imgBg{
+        width: 100%;
+        height: auto;
+    }
+ }
