--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -1,10 +1,15 @@
 <div class="container-fluid mt-4">
-    <img src="../../../assets/images/contactBg.jpg" class="aboutBg" alt="">
-    <div class="container d-flex justify-content-center">
-        <p class="title display-3 lead mt-3">Contact me at</p>
-        <a href="https://www.linkedin.com/in/francisco-vieira1999" target=”_blank”><img src="../../../assets/images/linkedin.png" height="50" alt=""></a>
-        <a href="https://www.instagram.com/_dupre_/" target=”_blank”><img src="../../../assets/images/instaLogo.jpg" height="50" alt=""></a>
-        <a href="https://www.instagram.com/_dupre_/" target=”_blank”><img src="../../../assets/images/email.jpg" height="50" alt=""></a>
-        <a href="https://github.com/franciscovieiracode" target=”_blank”><img src="../../../assets/images/github.jpg" height="50" alt=""></a>
+        <p class="display-4 lead text-center ">Contact me</p>
+            <div class="container p-4">
+                <div class="row text-center mt-3">
+                    <a class="text" href="https://www.linkedin.com/in/francisco-vieira1999" target=”_blank”><img src="../../../assets/images/linkedin.png" height="45" class="rounded-circle m-2" alt="">/in/francisco-vieira1999/</a>
+                    <a class="text" href="https://www.instagram.com/_dupre_/" target=”_blank”><img src="../../../assets/images/instaLogo.jpg" height="45" class="rounded-circle m-2" alt="">@_dupre_</a>
+                    <button class="btn text" (click)="copy()" target=”_blank”><img src="../../../assets/images/email.jpg" height="45" class="rounded-circle m-2" alt="">franciscovieiracode@gmail.com</button>
+                    <div *ngIf="copied" class="alert alert-secondary" role="alert">
+                        Copied email to clipboard!
+                      </div>
+                    <a class="text" href="https://github.com/franciscovieiracode" target=”_blank”><img src="../../../assets/images/github.jpg" height="45" class="rounded-circle m-2" alt="">/franciscovieiracode</a>
+                </div>
+        </div>
     </div>
-</div>
+
