--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -1,17 +1,34 @@
-<div class="container-fluid mt-4">
-        <p class="display-4 lead text-center ">Contact me</p>
-            <div class="container p-4">
-                <div class="row text-center mt-3">
-                    <a class="text col-6" href="https://www.linkedin.com/in/francisco-vieira1999" target=”_blank”><img src="../../../assets/images/linkedin.png" height="45" class="rounded-circle m-2" alt="">/in/francisco-vieira1999/</a>
-                    <a class="text col-6" href="https://www.instagram.com/_dupre_/" target=”_blank”><img src="../../../assets/images/instaLogo.jpg" height="45" class="rounded-circle m-2" alt="">@_dupre_</a>
-                </div>
+<div class="container-fluid">
+    <img src="../../../assets/images/contactBg.jpg" class="imgBg" alt="">
+            <div class="container">
+                <p class="title1 display-4 lead text-center mb-5 mt-5"><strong>Contact Francisco</strong></p>
+                <p class="display-6 lead text-center">Get in touch with me to build incredible stuff!</p>        
                 <div class="row text-center">
-                    <button *ngIf="!copied && mobile" class="btn text col-6" (click)="copy()" target=”_blank”><img src="../../../assets/images/email.jpg" height="45" class="rounded-circle m-2" alt="">franciscovieiracode @gmail.com</button>
-                    <button *ngIf="!copied && !mobile" class="btn text col-6" (click)="copy()" target=”_blank”><img src="../../../assets/images/email.jpg" height="45" class="rounded-circle m-2" alt="">franciscovieiracode@gmail.com</button>
-                    <div *ngIf="copied" class="alert alert-secondary col-6" role="alert">
-                        Copied email to clipboard!
-                      </div>
-                    <a class="text col-6" href="https://github.com/franciscovieiracode" target=”_blank”><img src="../../../assets/images/github.jpg" height="45" class="rounded-circle m-2" alt="">/franciscovieiracode</a>
+                    <div class="col-sm">
+                        <a href="https://www.linkedin.com/in/francisco-vieira1999" target=”_blank”><img src="../../../assets/images/linkedin.png" height="130" class="rounded-circle"></a>
+                        <p class="mt-3 text-danger">LinkedIn</p>
+                        <p class="lead">/in/francisco-vieira1999</p>
+                    </div>
+                    <div class="col-sm">
+                        <a (click)="copy()"><img src="../../../assets/images/email.jpg" height="130" class="email rounded-circle"></a>
+                        <p class="mt-3 text-danger">Email</p>
+                        <p class="lead">franciscovieiracode@gmail.com</p>
+                        <div>
+                            <ngb-toast *ngIf="copied" class="toaster" header="Notification" [autohide]="false" (hidden)="copied=false">
+                                Email copied to clipboard!
+                            </ngb-toast>
+                        </div>
+                </div>
+                    <div class="col-sm">
+                        <a href="https://github.com/franciscovieiracode" target=”_blank”><img src="../../../assets/images/github.jpg" height="130" class="rounded-circle"></a>
+                        <p class="mt-3 text-danger">Github</p>
+                        <p class="lead">/in/francisco-vieira1999</p>
+                    </div>
+                    <div class="col-sm">
+                        <a href="https://www.instagram.com/_dupre_" target=”_blank”><img src="../../../assets/images/instaLogo.jpg" height="130" class="rounded-circle"></a>
+                        <p class="mt-3 text-danger">Instagram</p>
+                        <p class="lead">@_dupre_</p>
+                    </div>
                 </div>
         </div>
     </div>
