added info on portfolio details, updated cv and finalized contact

--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -1,7 +1,6 @@
 <div class="container-fluid">
-    <img src="../../../assets/images/contactBg.jpg" class="imgBg" alt="">
             <div class="container">
-                <p class="title1 display-4 lead text-center mb-5 mt-5"><strong>Contact Francisco</strong></p>
+                <p class="title1 display-4 lead text-center"><strong>Contact Francisco</strong></p>
                 <p class="display-6 lead text-center">Get in touch with me to build incredible stuff!</p>        
                 <div class="row text-center">
                     <div class="col-sm">
@@ -20,7 +19,7 @@
                         </div>
                 </div>
                     <div class="col-sm">
-                        <a href="https://github.com/franciscovieiracode" target=”_blank”><img src="../../../assets/images/github.jpg" height="130" class="rounded-circle"></a>
+                        <a href="https://github.com/franciscovieiracode" target=”_blank”><img src="../../../assets/images/github.png" height="130" class="rounded-circle"></a>
                         <p class="mt-3 text-danger">Github</p>
                         <p class="lead">/in/francisco-vieira1999</p>
                     </div>
