--- a/src/app/components/contact/contact.component.css
+++ b/src/app/components/contact/contact.component.css
@@ -3,20 +3,16 @@
     height: 47.5rem;
 }
 
-.container-fluid{
-    position: relative;
-    overflow-x: hidden;
-    padding: 0%;
-    
-}
-
 .email{
     cursor: pointer;
 }
 
+.row{
+    margin-top: 5rem;
+}
 
 .title1{
-    margin-top: 5%;
+    margin-bottom: 5rem;
 }
 
 .toaster{
@@ -27,8 +23,8 @@
 }
 
 .container{
-    margin-top: 10%;
-    margin-bottom: 10%;
+    padding-top: 7rem;
+    height: 45rem;
 }
 
 .text{
@@ -36,9 +32,16 @@
     color: black;
 }
 
+.container-fluid{
+    background-image: linear-gradient(to bottom, rgba(255, 255, 255, 1), rgba(255, 255, 255, 0)), url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAQMAAADCCAMAAAB6zFdcAAAAA1BMVEXh2dGudBtZAAAASElEQVR4nO3BMQEAAADCoPVPbQwfoAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAIC3AcUIAAFkqh/QAAAAAElFTkSuQmCC');
+}
+
 @media (max-width: 575.98px) { 
     .imgBg{
         width: 100%;
         height: auto;
+    }
+    .container{
+        height: 100%;
     }
  }
