added rest of info and pics

--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -3,10 +3,10 @@
         <div class="container">
         <p class="display-6">Hello there,</p>
         <p class="display-1">I'm Francisco</p>
-        <div class="description">A full stack software engineer based in Porto, Portugal. Born in late 99, at the moment going 
+        <div class="description">A full stack software developer based in Porto, Portugal. Born in late 99, at the moment going 
             into my final year of my software engineering degree in Escola Superior de Tecnologia e Gestão - 
-            Instituto Politécnico do Porto, over the past years i deleloped a huge passion for web development, ending up being a junior full stack engennier. 
-            Being the MEAN stack my favorite tech stack to work with. But due to myself being a natural researcher, i've also worked with all kinds of technologies</div>
+            Instituto Politécnico do Porto, over the past years i deleloped a huge passion for web development, ending up being a junior full stack developer. 
+            Being Web Development my favorite area to work with. But due to myself being a natural researcher, i've also worked in all kinds of areas/technologies.</div>
         <div class="mt-3">
             <button (click)="openCV()" class="btn btn-secondary active btn-sm">My Curriculum Vitae</button>
          </div>
