--- a/src/app/components/portfolio/portfolio.component.css
+++ b/src/app/components/portfolio/portfolio.component.css
@@ -22,6 +22,14 @@
         height: 14rem;
     }
  }
+
+ .carouselInner{
+  margin-bottom: 85px;
+ }
+
+ .carousel{
+    margin-top: 20px;
+ }
   
   .box {
     max-width: 25rem;
